--- a/vikky.html
+++ b/vikky.html
@@ -5,6 +5,7 @@
 function getElements() {
   var x = document.getElementsByName("x");
   document.getElementById("demo").innerHTML = x.length;
+  console.log("My name is "+x);
 }
 </script>
 </head>
